--- a/events-app/src/index.css
+++ b/events-app/src/index.css
@@ -1,3 +1,11 @@
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+}
+
+
 /* styling for nav menu */
 .app {
  display: flex;
@@ -44,3 +52,4 @@
 body {
   background-color: #fff4e6;
 }
+
